<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">The Decider</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Decision Name</string>
    <string name="welcome_message">The Decider helps you pick from a few different choices. You can use it to decide on a restaurant to have dinner at, a car or a phone to buy, an apartment to rent, or anything else. It\'s based on the Analytic Hierarchy Process.</string>
    <string name="decision_name_hint">I\'m trying to pick a &#8230;</string>
    <string name="decision_name_button_text">Enter</string>
    <string name="title_activity_criteria_entry">Criteria Entry</string>
    <string name="criteria_entry_message">Enter the criteria you care about in a %s:</string>
    <string name="default_criteria_entry_message">Enter the criteria you care about:</string>
    <string name="criteria_entry_elaboration">(e.g., for a car you might choose criteria like reliability, price and gas mileage)</string>
    <string name="criterion_entry_hint">criterion</string>
    <string name="criteria_entry_button_text">Enter criteria</string>
    <string name="title_activity_options_entry">Options Entry</string>
    <string name="options_entry_message">Enter the options you care about in a %s:</string>
    <string name="default_options_entry_message">Enter the choices you\'re considering:</string>
    <string name="options_entry_elaboration">(e.g., for a car you might choose between a Jeep, Prius and Mustang)</string>
    <string name="option_entry_hint">option</string>
    <string name="options_entry_button_text">Enter options</string>
    <string name="title_activity_criteria_weighting">Criteria Weighting</string>
    <string name="criteria_weighting_message">Choose how important each criterion is when compared to another one:</string>
    <string name="title_activity_criteria_weight_display">Criteria Weights</string>
    <string name="criteria_display_message">How much each criterion matters to you</string>
    <string name="title_activity_option_rating">Option Ratings</string>
    <string name="option_rating_message">Rate how good each option is for each criterion:</string>
    <string name="title_activity_option_grades_display">Results</string>
    <string name="option_grades_display_message">Option grades</string>
    <string name="option_grades_display_further_instructions">If this helps, congrats! If it doesn\'t sit right, think about your criteria and make sure you\'re including everything</string>
    <string name="option_grades_display_button_text">Start Over</string>

</resources>