<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".CriteriaEntryActivity" 
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_criteria_entry_message" 
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criteria_entry_elaboration" 
    />
    <EditText 
        android:id="@+id/criterion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/criterion_entry_hint" 
    />
    <EditText 
        android:id="@+id/criterion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/criterion_entry_hint" 
    />
    <EditText 
        android:id="@+id/criterion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/criterion_entry_hint" 
    />
    <EditText 
        android:id="@+id/criterion4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/criterion_entry_hint" 
    />
    <EditText 
        android:id="@+id/criterion5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/criterion_entry_hint" 
    />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/criteria_entry_button_text"
        android:onClick="enterCriteria" 
    />
</LinearLayout>